# signals-demo

./: README.md  main.ipynb  manifest.yaml  pyproject.toml
demo/benchmark/: benchmark.py  main.py
demo/metadata/: main.py
script/: benchmark.sh  breakpoint.sh  kibana.sh  meta.sh  pbench.sh
signals_demo/: breakpoint.py  export.py  loginit.py  util.py
signals_demo/benchmark/: benchmark.py  main.py
signals_demo/metadata/: main.py
